# fgj2021-5x5-treasure-hunt

./: .gitignore  CMakeLists.txt  DO.ME.txt  README.md  ggj21  workspace.code-workspace
assets/: Game.cpp  Game.h  main.cpp
assets-src/thebiisi/: thebiisi.aup
assets-src/thebiisi/thebiisi_data/eff/d1f/: eff1f4c3.au  eff1f77d.au  eff1f8ac.au  eff1f949.au  eff1fa58.au  eff1fcc7.au
assets/shader/: mapvis.frag.glsl
src/: Camera.cpp  Camera.h  Game.cpp  Game.h  GameClient.cpp  GameClient.h  Global.cpp  Global.h  Grid.cpp  Grid.h  GridViz.cpp  GridViz.h  GuIRenderingState.cpp  GuiRenderInfo.h  GuiRendering.cpp  GuiRendering.h  GuiRenderingState.h  Input.cpp  Input.h  Mankka.cpp  Mankka.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Players.cpp  Players.hpp  Resources.cpp  Resources.h  SfmlGuiRendering.cpp  SfmlGuiRendering.h  main.cpp  workingdir.cpp  workingdir.h
util/: launch.vs.json
util/fgj2021-lost-and-found/fgj2021-lost-and-found/: fgj2021-lost-and-found-Info.plist
util/fgj2021-lost-and-found/fgj2021-lost-and-found.xcodeproj/: project.pbxproj
util/fgj2021-lost-and-found/fgj2021-lost-and-found.xcodeproj/project.xcworkspace/xcuserdata/tomikokkonen.xcuserdatad/: UserInterfaceState.xcuserstate
util/fgj2021-lost-and-found/fgj2021-lost-and-found.xcodeproj/xcuserdata/tomikokkonen.xcuserdatad/xcschemes/: xcschememanagement.plist
util/visual-studio/: launch.vs.json
util/vscode/: INFO.txt  launch.json  tasks.json
vs_proj/: vs_proj.sln  vs_proj.vcxproj  vs_proj.vcxproj.filters
